Fix text alignment in all notifications view

--- a/astrobin/static/css/astrobin.less
+++ b/astrobin/static/css/astrobin.less
@@ -4511,3 +4511,6 @@ table.group-list, table.group-member-list {
     }
 }
 
+table.notifications td {
+    text-align: left !important;
+}
